packages/example/src/errors/index.ts
export { SnapError } from "./Snap/SnapError";
